// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product matches the snapshot when seed packets is selected and a number is entered 1`] = `
<div>
  <section
    class="sc-hKwDye bHYLkR"
  >
    <h2
      class="sc-eCImPb opaLQ"
    >
      corn
    </h2>
    <img
      alt="corn"
      class="sc-jRQBWg csmCrb"
      src="corn.jpg"
    />
    <form
      class="sc-gKclnd jlcuhb"
    >
      <fieldset
        style="display: flex; gap: 1.5em;"
      >
        <legend>
          Product type
        </legend>
        <label>
          <input
            checked=""
            name="product_type"
            type="radio"
            value="SEED_PACKETS"
          />
          Seed Packets
        </label>
        <label>
          <input
            name="product_type"
            type="radio"
            value="SEEDLINGS"
          />
          Seedlings
        </label>
      </fieldset>
      <div>
        <label
          for="count"
        >
          Number of 
          seed packets
           ($
          4
           * 
          4
           = $
          16
          )
        </label>
        <br />
        <input
          id="count"
          type="number"
          value=""
        />
      </div>
      <div
        class="sc-bdvvtL iGuzkS"
      >
        Postage = $
        8
      </div>
      <div
        class="sc-dkPtRN kRyTEO"
      >
        Total: $
        24
      </div>
    </form>
  </section>
</div>
`;

exports[`Product matches the snapshot when seed packets is selected and no number is entered 1`] = `
<div>
  <section
    class="sc-hKwDye bHYLkR"
  >
    <h2
      class="sc-eCImPb opaLQ"
    >
      corn
    </h2>
    <img
      alt="corn"
      class="sc-jRQBWg csmCrb"
      src="corn.jpg"
    />
    <form
      class="sc-gKclnd jlcuhb"
    >
      <fieldset
        style="display: flex; gap: 1.5em;"
      >
        <legend>
          Product type
        </legend>
        <label>
          <input
            checked=""
            name="product_type"
            type="radio"
            value="SEED_PACKETS"
          />
          Seed Packets
        </label>
        <label>
          <input
            name="product_type"
            type="radio"
            value="SEEDLINGS"
          />
          Seedlings
        </label>
      </fieldset>
      <div>
        <label
          for="count"
        >
          Number of 
          seed packets
           ($
          4
           * 
          0
           = $
          0
          )
        </label>
        <br />
        <input
          id="count"
          type="number"
          value=""
        />
      </div>
      <div
        class="sc-bdvvtL iGuzkS"
      >
        Postage = $
        8
      </div>
      <div
        class="sc-dkPtRN kRyTEO"
      >
        Please enter a number to see the total
      </div>
    </form>
  </section>
</div>
`;

exports[`Product matches the snapshot when seedlings is selected and a number is entered 1`] = `
<div>
  <section
    class="sc-hKwDye bHYLkR"
  >
    <h2
      class="sc-eCImPb opaLQ"
    >
      corn
    </h2>
    <img
      alt="corn"
      class="sc-jRQBWg csmCrb"
      src="corn.jpg"
    />
    <form
      class="sc-gKclnd jlcuhb"
    >
      <fieldset
        style="display: flex; gap: 1.5em;"
      >
        <legend>
          Product type
        </legend>
        <label>
          <input
            checked=""
            name="product_type"
            type="radio"
            value="SEED_PACKETS"
          />
          Seed Packets
        </label>
        <label>
          <input
            name="product_type"
            type="radio"
            value="SEEDLINGS"
          />
          Seedlings
        </label>
      </fieldset>
      <div>
        <label
          for="count"
        >
          Number of 
          seedlings
           ($
          8
           * 
          4
           = $
          32
          )
        </label>
        <br />
        <input
          id="count"
          type="number"
          value=""
        />
      </div>
      <div
        class="sc-bdvvtL iGuzkS"
      >
        Postage = $
        32
      </div>
      <div
        class="sc-dkPtRN kRyTEO"
      >
        Total: $
        64
      </div>
    </form>
  </section>
</div>
`;

exports[`Product matches the snapshot when seedlings is selected and no number is entered 1`] = `
<div>
  <section
    class="sc-hKwDye bHYLkR"
  >
    <h2
      class="sc-eCImPb opaLQ"
    >
      corn
    </h2>
    <img
      alt="corn"
      class="sc-jRQBWg csmCrb"
      src="corn.jpg"
    />
    <form
      class="sc-gKclnd jlcuhb"
    >
      <fieldset
        style="display: flex; gap: 1.5em;"
      >
        <legend>
          Product type
        </legend>
        <label>
          <input
            checked=""
            name="product_type"
            type="radio"
            value="SEED_PACKETS"
          />
          Seed Packets
        </label>
        <label>
          <input
            name="product_type"
            type="radio"
            value="SEEDLINGS"
          />
          Seedlings
        </label>
      </fieldset>
      <div>
        <label
          for="count"
        >
          Number of 
          seedlings
           ($
          8
           * 
          0
           = $
          0
          )
        </label>
        <br />
        <input
          id="count"
          type="number"
          value=""
        />
      </div>
      <div
        class="sc-bdvvtL iGuzkS"
      >
        Postage = $
        0
      </div>
      <div
        class="sc-dkPtRN kRyTEO"
      >
        Please enter a number to see the total
      </div>
    </form>
  </section>
</div>
`;
